Run upstream Omarchy ttfx animations in the native Android screensaver